Fix table of contents height on mobile devices

--- a/src/components/EtlToolsXvsYPage/SectionTwo/styles.module.less
+++ b/src/components/EtlToolsXvsYPage/SectionTwo/styles.module.less
@@ -113,6 +113,7 @@
   display: flex;
   flex-direction: column;
   gap: 24px;
+  height: 100%;
   
   @media (min-width: 426px) {
     min-width: 256px;
@@ -121,7 +122,31 @@
   @media (min-width: 1241px) {
     position: sticky;
     top: 140px;
-    height: fit-content;
+  }
+}
+
+.tableOfContentsWrapper {
+  overflow: auto;
+  max-height: 70vh;
+
+  @media (max-height: 880px) {
+    max-height: 65vh;
+  }
+
+  @media (max-height: 740px) {
+    max-height: 60vh;
+  }
+
+  @media (max-height: 740px) {
+    max-height: 50vh;
+  }
+
+  @media (max-height: 540px) {
+    max-height: 40vh;
+  }
+
+  @media (max-height: 440px) {
+    display: none;
   }
 }
 
