--- a/src/templates/blog-post/styles.module.less
+++ b/src/templates/blog-post/styles.module.less
@@ -389,9 +389,34 @@
 
 .shareArticleDesktop {
   display: flex;
-  margin-bottom: 24px;
 
   @media (max-width: 1150px) {
+    display: none;
+  }
+}
+
+.tableOfContentsWrapper {
+  overflow: auto;
+  max-height: 45vh;
+  margin-top: 24px;
+
+  @media (max-height: 1128px) {
+    max-height: 36vh;
+  }
+
+  @media (max-height: 1000px) {
+    max-height: 30vh;
+  }
+
+  @media (max-height: 900px) {
+    max-height: 25vh;
+  }
+
+  @media (max-height: 815px) {
+    max-height: 20vh;
+  }
+
+  @media (max-height: 770px) {
     display: none;
   }
 }
